[package]
name = "slabigator"
version = "0.9.1"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A linked list that doesn't do dynamic memory allocations"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["data-structures"]
keywords = ["slab", "linkedlist", "deque", "queue"]
homepage = "https://github.com/jedisct1/rust-slabigator"
repository = "https://github.com/jedisct1/rust-slabigator"

[dev-dependencies]
rand = "0.8.5"

[features]
releasefast = []
slot_u32 = []
slot_u64 = []
slot_usize = []
